# sentineltouch

./: CMakeLists.txt  Dockerfile  README.md  appendix.md  docker-entrypoint.sh  requirements.txt
embedding_csv/polyu/lenet5/16/authenticate/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  (+952 more)
images/: prepare_fvc2000.py
images/Cross_Fingerprint_Images_Database/: CrossFingerprint_Database_Readme.txt
python/: exportAllWeights.py  exportWeights.ipynb  export_dataset.ipynb  pca_1_to_1_authentication.py  pca_1_to_N_authentication.py  pca_visualization.ipynb
python/embeddings/: embedding-128_fvc2000_validation_embeddings.csv  embedding-128_polyu_validation_embeddings.csv  embedding-128_sokoto_validation_embeddings.csv  embedding-16_polyu_validation_embeddings.csv  embedding-16_sokoto_validation_embeddings.csv  embedding-32_polyu_validation_embeddings.csv  embedding-32_sokoto_validation_embeddings.csv  polyu_validation_embeddings.csv  sokoto_validation_embeddings.csv
python/metadata/: polyu_meta.txt  polyu_meta_eval.txt  sokoto_meta.txt
python/raspberry_pi_evaluation/: lenet5.py  pca.py  resnet.py
python/utils/: PairDataset.py  authentication_model.py  blindmatch_model.py  deepprint.py  lenet5.py  loss.py  pca_module.py  polyu_dataset.py  resnet18.py  socofing_authentication_dataset.py  sokoto_dataset.py  split_weights.py  training_functions_1_to_1_blind_match.py  training_functions_1_to_N_blind_match.py
results/lenet5/: fhepredictions.txt
src/: ANNController.cpp  ANNController.h  FHEController.cpp  FHEController.h  LeNet5.cpp  LeNet5Hybrid.cpp  Utils.h  UtilsData.h
trained_models/: sentinal_1_to_N_pca_2025-12-09.pth  sentinal_1_to_N_pca_polyu_lenet5_16_2025-08-23.pth  sentinal_1_to_N_pca_polyu_lenet5_16_2025-08-24.pth  sentinal_1_to_N_pca_polyu_lenet5_16_2025-12-09.pth  sentinal_1_to_N_pca_polyu_lenet5_32_2025-08-23.pth  sentinal_1_to_N_pca_polyu_lenet5_32_2025-08-24.pth  sentinal_1_to_N_pca_polyu_mlp_16_2025-08-24.pth  sentinal_1_to_N_pca_polyu_mlp_32_2025-08-23.pth  sentinal_1_to_N_pca_sokoto_lenet5_16_2025-08-24.pth  sentinal_1_to_N_pca_sokoto_lenet5_32_2025-08-24.pth  sentinal_1_to_N_pca_sokoto_mlp_16_2025-08-24.pth  sentinal_1_to_N_pca_sokoto_mlp_32_2025-08-24.pth
transformed_inputs/lenet5/polyu/identification/: 0.csv  1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
transformed_inputs/lenet5/polyu/registration/: 0.csv  1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
weights/lenet5_polyu_16/: conv1_bias.csv  conv1_weight.csv  conv2_bias.csv  conv2_weight.csv  fc1_bias.csv  fc1_weight.csv  fc2_bias.csv  fc2_weight.csv  fc3_bias.csv  fc3_weight.csv
weights/lenet5_polyu_32/: conv1_bias.csv  conv1_weight.csv  conv2_bias.csv  conv2_weight.csv  fc1_bias.csv  fc1_weight.csv  fc2_bias.csv  fc2_weight.csv  fc3_bias.csv  fc3_weight.csv
weights/mlp_polyu_16/: fc1_bias.csv  fc2_bias.csv  fc2_weight.csv  fc3_bias.csv  fc3_weight.csv
weights/mlp_polyu_32/: fc1_bias.csv  fc2_bias.csv  fc2_weight.csv  fc3_bias.csv  fc3_weight.csv  fc5_weight.csv  fc6_bias.csv
(+2880 files in other folders)
